fix loading. fix shift-click on non-top point

--- a/src/index.css
+++ b/src/index.css
@@ -33,12 +33,6 @@
   input[type=radio]:checked {
     @apply bg-amber-900;
   }
-
-  input[type=checkbox],   input[type=checkbox]:hover{
-    @apply bg-amber-600;
-    appearance: none;
-    -webkit-appearance: none;
-  }
  input[type=checkbox]:focus{
     @apply bg-amber-700 outline-none;
   }
